components/kafka-streaming-service/manifests/kafka-streaming-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kafka-streaming-service
  labels:
    camel.apache.org/integration: kafka-streaming-service
spec:
  host: kafka-streaming-service-bobbycar.apps.cluster-sing-3f05.sing-3f05.example.opentlc.com
  to:
    kind: Service
    name: kafka-streaming-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
